[project]
name = "data_cleaning_agent"
version = "0.1.0"
description = "AI-powered Streamlit app for recommending data cleaning steps based on context"
requires-python = ">=3.9"

dependencies = [
    "pandas",
    "openai",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "transformers",
    "fastapi[standard]",
    "pydantic"
]

[tool.uv]
